# Project

./: .gitignore  CMakeLists.txt  README.md
documentation/html/: _bishop_8cpp.html  _bishop_8h.html  _bishop_8h_source.html  _board_8cpp.html  _board_8h.html  _board_8h_source.html  _color_8h.html  _color_8h_source.html  _computer_player_8cpp.html  _computer_player_8h.html  _computer_player_8h_source.html  _coordinates_8h.html  _coordinates_8h_source.html  _game_manager_8cpp.html  _game_manager_8h.html  _game_manager_8h_source.html  _human_player_8cpp.html  _human_player_8h.html  _human_player_8h_source.html  _king_8cpp.html  _king_8h.html  _king_8h_source.html  _knight_8cpp.html  _knight_8h.html  _knight_8h_source.html  _pawn_8cpp.html  _pawn_8h.html  _pawn_8h_source.html  _piece_8cpp.html  _piece_8h.html  _piece_8h_source.html  _player_8h.html  _player_8h_source.html  _queen_8cpp.html  _queen_8h.html  _queen_8h_source.html  _replay_8cpp.html  _replay_manager_8cpp.html  (+51 more)
html/: _bishop_8h_source.html  _board_8h_source.html  _color_8h_source.html  _computer_player_8h_source.html  _coordinates_8h_source.html  _game_manager_8h_source.html  _human_player_8h_source.html  _king_8h_source.html  _knight_8h_source.html  _pawn_8h_source.html  _piece_8h_source.html  _player_8h_source.html  _queen_8h_source.html  _replay_manager_8h_source.html  _replay_player_8h_source.html  _rook_8h_source.html  annotated.html  classchess_1_1_bishop-members.html  classchess_1_1_bishop.html  classchess_1_1_board-members.html  classchess_1_1_board.html  classchess_1_1_computer_player-members.html  classchess_1_1_computer_player.html  classchess_1_1_game_manager-members.html  classchess_1_1_game_manager.html  classchess_1_1_human_player-members.html  classchess_1_1_human_player.html  classchess_1_1_king-members.html  classchess_1_1_king.html  classchess_1_1_knight-members.html  classchess_1_1_knight.html  classchess_1_1_pawn-members.html  classchess_1_1_pawn.html  classchess_1_1_piece-members.html  classchess_1_1_piece.html  classchess_1_1_player-members.html  classchess_1_1_player.html  classchess_1_1_queen-members.html  classchess_1_1_queen.html  classchess_1_1_replay_manager-members.html  (+20 more)
src/: Board.cpp  Board.h  Color.h  Coordinates.h  GameManager.cpp  GameManager.h  Replay.cpp  ReplayManager.cpp  ReplayManager.h  main.cpp
tests/: Humans vs Computer.txt  Stockfish vs Alpha Zero.txt  general_game.txt
(+56 files in other folders)
